--- a/HTML/admin-login.html
+++ b/HTML/admin-login.html
@@ -3,22 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <title>Admin</title>
+
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link href="../css/bootstrap.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/main.css">
 </head>
+
 <body>
+
 <div class="container">
   <h1>Admin login</h1>
-  <form action="/adminLoginService">
+  <form action="/adminLoginServiceClass">
+<!--    adminLoginServiceClass klasse er ikke blevet oprettet endnu-->
+
     <div class="form-group">
-      <label for="user">Username</label>
-      <input type="text" class=“form-control" id="user" placeholder="Type Your Username" name="user">
-    </div>  <div class="form-group">
-    <label for="pwd">Password</label>
-    <input type="password" class="form-control" id="pwd" placeholder="Type Your Password" name="password">
-  </div>
-<!--    <div class="form-group form-check">-->
-<!--      <label class="form-check-label">-->
-<!--        <input class="form-check-input" type="checkbox" name="Logged in"> Logged in  </label>-->
-<!--    </div>-->
+      <label for="user">Username</label><br>
+      <input type="password" class=“form-control" id="user" placeholder="Type Your Username" name="user">
+    </div>
+
+    <div class="form-group">
+      <label for="pwd">Password</label>
+      <input type="password" class="form-control" id="pwd" placeholder="Type Your Password" name="password">
+    </div>
+
     <button type="submit" class="btn btn-primary">Log in</button>
   </form>
 </div>
