--- a/HTML/admin.html
+++ b/HTML/admin.html
@@ -8,7 +8,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href="../css/bootstrap.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="../css/admin.css">
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
 </head>
@@ -16,8 +15,6 @@
 <body>
 
 
-
-
-<script></script>
+<script src="../js/admin.js"></script>
 </body>
 </html>
