--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -56,6 +56,18 @@
   </div>
 </div>
 
+
+<h1>Tabel</h1>
+<table id="dataTable">
+  <tr>
+    <th style="text-align: left">ID</th>
+    <th style="text-align: left">Product Navn</th>
+    <th style="text-align: left">Pris</th>
+    <th style="text-align: left">Billede</th>
+  </tr>
+</table>
+
+
 <script src="../js/shop.js"></script>
 </body>
 </html>
