fetch virker for shows (allShows.js)

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -42,6 +42,8 @@
       <th>genre</th>
       <th>min alder</th>
       <th>medvirkende</th>
+      <th>billed</th>
+      <th>showID</th>
     </tr>
   </table>
 </div>
