--- a/HTML/admin-login.html
+++ b/HTML/admin-login.html
@@ -18,15 +18,14 @@
   <h1>Admin login</h1>
   <form action="/adminLoginServiceClass">
 <!--    adminLoginServiceClass klasse er ikke blevet oprettet endnu-->
-
     <div class="form-group">
-      <label for="user">Username</label><br>
-      <input type="password" class=“form-control" id="user" placeholder="Type Your Username" name="user">
+      <label for="user">Username</label>
+      <input type="text" class="form-control" id="user" name="user" required>
     </div>
 
     <div class="form-group">
       <label for="pwd">Password</label>
-      <input type="password" class="form-control" id="pwd" placeholder="Type Your Password" name="password">
+      <input type="password" class="form-control" id="pwd" name="password" required>
     </div>
 
     <button type="submit" class="btn btn-primary">Log in</button>
