--- a/HTML/admin.html
+++ b/HTML/admin.html
@@ -11,9 +11,19 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
 </head>
-
 <body>
 
+<div class="container">
+  <h1>Toolbar</h1>
+  <ul class="list-group">
+    <li class="list-group-item"><a href="create-show.html">Opret nyt show</a></li>
+    <li class="list-group-item"><a href="all-shows-admin.html">Se alle shows</a></li>
+    <li class="list-group-item"><a href="edit-show.html">Manage shows</a></li>
+    <li class="list-group-item"><a href="create-booking.html">Opret ny booking</a></li>
+    <li class="list-group-item"><a href="find-and-edit-booking.html">Manage bookings</a></li>
+    <li class="list-group-item"><a href="work-schedule.html">Arbejdskalender</a></li>
+  </ul>
+</div>
 
 <script src="../js/admin.js"></script>
 </body>
