find show ved titel javascript funktion

--- a/HTML/admin.html
+++ b/HTML/admin.html
@@ -14,14 +14,13 @@
 <body>
 
 <div class="container">
-  <h1>Toolbar</h1>
+  <h1>Menu</h1>
   <ul class="list-group">
-    <li class="list-group-item"><a href="create-show.html">Opret nyt show</a></li>
-    <li class="list-group-item"><a href="all-shows-admin.html">Se alle shows</a></li>
-    <li class="list-group-item"><a href="edit-show.html">Manage shows</a></li>
-    <li class="list-group-item"><a href="create-booking.html">Opret ny booking</a></li>
-    <li class="list-group-item"><a href="find-and-edit-booking.html">Manage bookings</a></li>
-    <li class="list-group-item"><a href="work-schedule.html">Arbejdskalender</a></li>
+    <li style="background-color: #dddddd" class="list-group-item"><a href="create-show.html">Opret nyt show</a></li>
+    <li class="list-group-item"><a href="find-and-edit-shows.html">Styr shows</a></li>
+    <li style="background-color: #dddddd" class="list-group-item"><a href="create-booking.html">Opret ny booking</a></li>
+    <li class="list-group-item"><a href="find-and-edit-booking.html">Styr bookings</a></li>
+    <li style="background-color: #dddddd" class="list-group-item"><a href="work-schedule.html">Arbejdskalender</a></li>
   </ul>
 </div>
 
