--- a/HTML/find-and-edit-booking.html
+++ b/HTML/find-and-edit-booking.html
@@ -12,11 +12,71 @@
   <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-<h1>work in progress</h1>
+
+<div class="container">
+  <form>
+    <div class="form-group">
+      <label for="booking">Indtast kunde telefon nummer</label>
+      <input type="number" class="form-control" id="booking" name="booking" required>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Find booking</button>
+  </form>
+  <!--    todo:-->
+  <p>retur felt? noget der viser den booking man har fundet</p>
+</div>
+
+<h1>Edit booking</h1>
+<form>
+  <div class="form-group">
+    <label for="name">Kunde navn</label>
+    <input type="text" class="form-control" id="name" name="name">
+  </div>
+
+  <div class="form-group">
+    <label for="phoneNum">Kunde tlf. nummer</label>
+    <input type="number" class="form-control" id="phoneNum" name="phoneNum">
+  </div>
+
+  <div class="form-group">
+    <label for="showId">Show ID</label>
+    <input type="number" class="form-control" id="showId" name="showId">
+  </div>
+
+  <div class="form-group">
+    <label for="cinemaHall">Sal nr.</label>
+    <input type="number" class="form-control" id="cinemaHall" name="cinemaHall">
+  </div>
+
+  <div class="form-group">
+    <label for="seatNum01">Sæde 1</label>
+    <input type="number" class="form-control" id="seatNum01" name="seatNum01">
+  </div>
+
+  <div class="form-group">
+    <label for="seatNum02">Sæde 2</label>
+    <input type="number" class="form-control" id="seatNum02" name="seatNum02">
+  </div>
+
+  <div class="form-group">
+    <label for="seatNum03">Sæde 3</label>
+    <input type="number" class="form-control" id="seatNum03" name="seatNum03">
+  </div>
+
+  <div class="form-group">
+    <label for="seatNum04">Sæde 4</label>
+    <input type="number" class="form-control" id="seatNum04" name="seatNum04">
+  </div>
+
+  <div class="form-group">
+    <label for="seatNum05">Sæde 5</label>
+    <input type="number" class="form-control" id="seatNum05" name="seatNum05">
+  </div>
+
+  <button type="submit" class="btn btn-primary">Edit</button>
+</form>
 
 <!--todo:-->
-<!--input -> telefon nummer-->
-<!--søg knap-->
 <!--se booking-->
 <!--ændr booking knap-->
 <!--slet booking knap-->
