--- a/HTML/index.html
+++ b/HTML/index.html
@@ -37,6 +37,7 @@
     <tr>
       <th>Titel</th>
       <th>Sal nr.</th>
+      <th>Dato</th>
       <th>start tid</th>
       <th>længde</th>
       <th>genre</th>
