--- a/HTML/find-and-edit-shows.html
+++ b/HTML/find-and-edit-shows.html
@@ -13,6 +13,19 @@
 </head>
 <body>
 
+<div class="container">
+  <form>
+    <div class="form-group">
+      <label for="show">Indtast show id</label>
+      <input type="number" class="form-control" id="show" name="show" required>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Find show</button>
+  </form>
+  <!--    todo:-->
+  <p>retur felt? noget der viser det show man har fundet</p>
+</div>
+
 <!-- movies tabel -->
 <div class="container-fluid">
   <table class="table" id="showsDataTable">
