--- a/HTML/create-show.html
+++ b/HTML/create-show.html
@@ -15,7 +15,7 @@
 
 <div class="container">
   <h1>Opret show</h1>
-  <form>
+
     <div class="form-group">
       <label for="title">Titel</label>
       <input type="text" class="form-control" id="title" name="title" required>
@@ -61,9 +61,9 @@
 <!--      <input type="image" class="form-control" id="img" name="img" alt="missing picture">-->
 <!--    </div>-->
 
-    <button type="submit" class="btn btn-primary">Opret</button>
-  </form>
+    <button type="submit" class="btn btn-primary createShowButton">Opret</button>
 </div>
 
+<script src="../js/shows/createShow.js"></script>
 </body>
 </html>
