--- a/HTML/index.html
+++ b/HTML/index.html
@@ -49,6 +49,6 @@
   </table>
 </div>
 
-<script src="../js/allShows.js"></script>
+<script src="../js/customerUI/allShows.js"></script>
 </body>
 </html>
