--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -30,6 +30,6 @@
   </table>
 </div>
 
-<script src="../js/allProducts.js"></script>
+<script src="../js/customerUI/allProducts.js"></script>
 </body>
 </html>
