--- a/HTML/index.html
+++ b/HTML/index.html
@@ -33,7 +33,7 @@
 
 <!-- movies tabel -->
 <div class="container-fluid">
-  <table class="table" id="showsDataTable">
+  <table class="table showsDataTable">
     <tr>
       <th>Titel</th>
       <th>Sal nr.</th>
