--- a/HTML/create-show.html
+++ b/HTML/create-show.html
@@ -16,6 +16,7 @@
 <div class="container">
   <h1>Opret show</h1>
 
+<!--  <form action="http://localhost:8080/shows/create" method="post" id="createShow-Form">-->
     <div class="form-group">
       <label for="title">Titel</label>
       <input type="text" class="form-control" id="title" name="title" required>
@@ -56,12 +57,13 @@
       <input type="text" class="form-control" id="stars" name="stars">
     </div>
 
-<!--    <div class="form-group">-->
-<!--      <label for="img">Billede</label>-->
-<!--      <input type="image" class="form-control" id="img" name="img" alt="missing picture">-->
-<!--    </div>-->
+    <!--    <div class="form-group">-->
+    <!--      <label for="img">Billede</label>-->
+    <!--      <input type="image" class="form-control" id="img" name="img" alt="missing picture">-->
+    <!--    </div>-->
 
-    <button type="submit" class="btn btn-primary createShowButton">Opret</button>
+    <button type="submit" class="btn btn-primary createShowButton">Opret show</button>
+<!--  </form>-->
 </div>
 
 <script src="../js/shows/createShow.js"></script>
