--- a/HTML/admin.html
+++ b/HTML/admin.html
@@ -20,6 +20,7 @@
     <li class="list-group-item"><a href="find-and-edit-shows.html">Styr shows</a></li>
     <li style="background-color: #dddddd" class="list-group-item"><a href="create-booking.html">Opret ny booking</a></li>
     <li class="list-group-item"><a href="find-and-edit-booking.html">Styr bookings</a></li>
+    <li class="list-group-item"><a href="shop.html">Shop</a></li>
     <li style="background-color: #dddddd" class="list-group-item"><a href="work-schedule.html">Arbejdskalender</a></li>
   </ul>
 </div>
