Fikset login for real

--- a/HTML/admin-login.html
+++ b/HTML/admin-login.html
@@ -40,7 +40,7 @@
 
     if (user === "admin" && password === "admin") {
       alert("Access Granted");
-      window.location = "admin.html";
+      window.location = "http://localhost:63342/kinoxp-GUI/kinoxp-3sem-GUI/HTML/admin.html";
       return false;
     } else {
       alert("Access Denied");
