--- a/HTML/create-show.html
+++ b/HTML/create-show.html
@@ -16,7 +16,6 @@
 <div class="container">
   <h1>Opret show</h1>
 
-<!--  <form action="http://localhost:8080/shows/create" method="post" id="createShow-Form">-->
     <div class="form-group">
       <label for="title">Titel</label>
       <input type="text" class="form-control" id="title" name="title" required>
@@ -34,12 +33,12 @@
 
     <div class="form-group">
       <label for="startTime">Start tidspunkt</label>
-      <input type="time" class="form-control" id="startTime" name="startTime" required>
+      <input type="text" class="form-control" id="startTime" name="startTime" required>
     </div>
 
     <div class="form-group">
       <label for="duration">Film længde</label>
-      <input type="time" class="form-control" id="duration" name="duration" required>
+      <input type="text" class="form-control" id="duration" name="duration" required>
     </div>
 
     <div class="form-group">
@@ -57,13 +56,13 @@
       <input type="text" class="form-control" id="stars" name="stars">
     </div>
 
+    <!--  ****************billede input******************** -->
     <!--    <div class="form-group">-->
     <!--      <label for="img">Billede</label>-->
     <!--      <input type="image" class="form-control" id="img" name="img" alt="missing picture">-->
     <!--    </div>-->
 
     <button type="submit" class="btn btn-primary createShowButton">Opret show</button>
-<!--  </form>-->
 </div>
 
 <script src="../js/shows/createShow.js"></script>
