--- a/HTML/find-and-edit-shows.html
+++ b/HTML/find-and-edit-shows.html
@@ -61,6 +61,7 @@
     <input type="text" class="form-control" id="stars" name="stars">
   </div>
 
+  <!--  ****************billede input******************** -->
   <!--    <div class="form-group">-->
   <!--      <label for="img">Billede</label>-->
   <!--      <input type="image" class="form-control" id="img" name="img" alt="missing picture">-->
