shop finish + opryddelse :)

--- a/HTML/admin/admin-login.html
+++ b/HTML/admin/admin-login.html
@@ -7,9 +7,9 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="../css/bootstrap.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
+  <link href="../../css/bootstrap.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="../../css/normalize.css">
+  <link rel="stylesheet" href="../../css/main.css">
 
 </head>
 
@@ -40,7 +40,7 @@
 
     if (user === "admin" && password === "admin") {
       alert("Access Granted");
-      window.location = "http://localhost:63342/kinoxp-GUI/kinoxp-3sem-GUI/HTML/admin.html";
+      window.location = "admin.html";
       return false;
     } else {
       alert("Access Denied");
