--- a/HTML/bookings/create-booking.html
+++ b/HTML/bookings/create-booking.html
@@ -7,9 +7,9 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="../css/bootstrap.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
+  <link href="../../css/bootstrap.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="../../css/normalize.css">
+  <link rel="stylesheet" href="../../css/main.css">
 </head>
 <body>
 
@@ -83,7 +83,7 @@
     <button class="btn btn-primary createBookingButton">Opret</button>
 </div>
 
-<script src="../js/bookings/createBooking.js"></script>
-<script src="../js/bookings/findShow-forCreateBookingPurposes.js"></script>
+<script src="../../js/bookings/createBooking.js"></script>
+<script src="../../js/bookings/findShow-forCreateBookingPurposes.js"></script>
 </body>
 </html>
