--- a/HTML/bookings/find-and-edit-booking.html
+++ b/HTML/bookings/find-and-edit-booking.html
@@ -7,9 +7,9 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="../css/bootstrap.css">
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../../css/bootstrap.css">
+  <link rel="stylesheet" href="../../css/normalize.css">
+  <link rel="stylesheet" href="../../css/main.css">
 </head>
 <body>
 
@@ -119,9 +119,9 @@
   <button type="submit" class="btn btn-primary editBookingButton">Edit</button>
 </div>
 
-<script src="../js/bookings/findBooking.js"></script>
-<script src="../js/bookings/deleteBooking.js"></script>
-<script src="../js/bookings/editBooking.js"></script>
-<script src="../js/bookings/printBookingTicket.js"></script>
+<script src="../../js/bookings/findBooking.js"></script>
+<script src="../../js/bookings/deleteBooking.js"></script>
+<script src="../../js/bookings/editBooking.js"></script>
+<script src="../../js/bookings/printBookingTicket.js"></script>
 </body>
 </html>
