--- a/HTML/shows/create-show.html
+++ b/HTML/shows/create-show.html
@@ -7,9 +7,9 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=2">
 
-  <link href="../css/bootstrap.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
+  <link href="../../css/bootstrap.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="../../css/normalize.css">
+  <link rel="stylesheet" href="../../css/main.css">
 </head>
 <body>
 
@@ -65,6 +65,6 @@
     <button type="submit" class="btn btn-primary createShowButton">Opret show</button>
 </div>
 
-<script src="../js/shows/createShow.js"></script>
+<script src="../../js/shows/createShow.js"></script>
 </body>
 </html>
