--- a/HTML/shows/find-and-edit-shows.html
+++ b/HTML/shows/find-and-edit-shows.html
@@ -7,9 +7,9 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="../css/bootstrap.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
+  <link href="../../css/bootstrap.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="../../css/normalize.css">
+  <link rel="stylesheet" href="../../css/main.css">
 </head>
 <body>
 
@@ -101,8 +101,8 @@
   </table>
 </div>
 
-<script src="../js/shows/editShow.js"></script>
-<script src="../js/shows/deleteShow.js"></script>
-<script src="../js/shows/findShow.js"></script>
+<script src="../../js/shows/editShow.js"></script>
+<script src="../../js/shows/deleteShow.js"></script>
+<script src="../../js/shows/findShow.js"></script>
 </body>
 </html>
