--- a/HTML/admin/work-schedule.html
+++ b/HTML/admin/work-schedule.html
@@ -7,9 +7,9 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="../css/bootstrap.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
+  <link href="../../css/bootstrap.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="../../css/normalize.css">
+  <link rel="stylesheet" href="../../css/main.css">
 </head>
 <body>
 <h1>work in progress</h1>
