--- a/HTML/customerUI/index.html
+++ b/HTML/customerUI/index.html
@@ -7,9 +7,9 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=2">
 
-  <link href="../css/bootstrap.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
+  <link href="../../css/bootstrap.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="../../css/normalize.css">
+  <link rel="stylesheet" href="../../css/main.css">
 </head>
 <body>
 
@@ -19,7 +19,7 @@
     <div class="col-3"></div>
     <div class="col-2"><a href="index.html">Home</a></div>
     <div class="col-2"><a href="shop.html">Shop</a></div>
-    <div class="col-2"><a href="admin-login.html">Admin</a></div>
+    <div class="col-2"><a href="../admin/admin-login.html">Admin</a></div>
     <div class="col-3"></div>
   </div>
 </div>
@@ -49,6 +49,6 @@
   </table>
 </div>
 
-<script src="../js/customerUI/allShows.js"></script>
+<script src="../../js/customerUI/allShows.js"></script>
 </body>
 </html>
