--- a/HTML/customerUI/shop.html
+++ b/HTML/customerUI/shop.html
@@ -7,9 +7,9 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=2">
 
-  <link href="../css/bootstrap.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
+  <link href="../../css/bootstrap.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="../../css/normalize.css">
+  <link rel="stylesheet" href="../../css/main.css">
 </head>
 <body>
 
@@ -19,20 +19,20 @@
     <div class="col-3"></div>
     <div class="col-2"><a href="index.html">Home</a></div>
     <div class="col-2"><a href="shop.html">Shop</a></div>
-    <div class="col-2"><a href="admin-login.html">Admin</a></div>
+    <div class="col-2"><a href="../admin/admin-login.html">Admin</a></div>
     <div class="col-3"></div>
   </div>
 </div>
 
 <!-- produkt type dropdown -->
-<div>
+<div class="container-fluid">
   <select name="productTypeSelect" id="productTypeSelect" onchange="filteredType()">
     <option hidden selected>Sortér efter produkt type</option>
     <option value="all">Vis alle typer</option>
-    <option value="merch">Merchandise</option>
-    <option value="sweets">Sweets</option>
-    <option value="drink">Drink</option>
-    <option value="food">Food</option>
+    <option value="merch">Tøj</option>
+    <option value="sweets">Slik</option>
+    <option value="drink">Drikelse</option>
+    <option value="food">Mad</option>
   </select>
 </div>
 
@@ -49,9 +49,6 @@
   </table>
 </div>
 
-<!--<button type="submit" class="btn btn-primary addToCart" hidden>Tilføj til kurv</button>-->
-
-
-<script src="../js/shop/findProducts.js"></script>
+<script src="../../js/customerUI/allProducts.js"></script>
 </body>
 </html>
