--- a/HTML/find-and-edit-shows.html
+++ b/HTML/find-and-edit-shows.html
@@ -64,7 +64,7 @@
   <!--  ****************billede input******************** -->
   <!--    <div class="form-group">-->
   <!--      <label for="img">Billede</label>-->
-  <!--      <input type="image" class="form-control" id="img" name="img" alt="missing picture">-->
+  <!--      <input type="file" class="form-control" id="img" name="img" accept="image/*">-->
   <!--    </div>-->
 
   <button type="submit" class="btn btn-primary editShowButton">Edit</button>
