--- a/HTML/create-show.html
+++ b/HTML/create-show.html
@@ -33,12 +33,12 @@
 
     <div class="form-group">
       <label for="startTime">Start tidspunkt</label>
-      <input type="text" class="form-control" id="startTime" name="startTime" required>
+      <input type="time" step="1" class="form-control" id="startTime" name="startTime" required>
     </div>
 
     <div class="form-group">
       <label for="duration">Film længde</label>
-      <input type="text" class="form-control" id="duration" name="duration" required>
+      <input type="time" step="1" class="form-control" id="duration" name="duration" required>
     </div>
 
     <div class="form-group">
@@ -56,11 +56,11 @@
       <input type="text" class="form-control" id="stars" name="stars">
     </div>
 
-    <!--  ****************billede input******************** -->
-    <!--    <div class="form-group">-->
-    <!--      <label for="img">Billede</label>-->
-    <!--      <input type="image" class="form-control" id="img" name="img" alt="missing picture">-->
-    <!--    </div>-->
+<!--  ***************billede input html********************-->
+<!--    <div class="form-group">-->
+<!--      <label for="img">Billede</label>-->
+<!--      <input type="file" class="form-control" id="img" name="img" accept="image/*">-->
+<!--    </div>-->
 
     <button type="submit" class="btn btn-primary createShowButton">Opret show</button>
 </div>
