shopping cart sjovt

--- a/HTML/admin/work-schedule.html
+++ b/HTML/admin/work-schedule.html
@@ -12,7 +12,21 @@
   <link rel="stylesheet" href="../../css/main.css">
 </head>
 <body>
-<h1>work in progress</h1>
-<!--todo:-->
+
+<div class="container-fluid">
+  <table class="table" id="workScheduleTable">
+    <tr>
+      <th>Mandag</th>
+      <th>Tirsdag</th>
+      <th>Onsdag</th>
+      <th>Torsdag</th>
+      <th>Fredag</th>
+      <th>Lørdag</th>
+      <th>Søndag</th>
+    </tr>
+  </table>
+</div>
+
+<script src="../../js/workCalendar.js"></script>
 </body>
 </html>
