--- a/HTML/customerUI/shop.html
+++ b/HTML/customerUI/shop.html
@@ -24,29 +24,47 @@
   </div>
 </div>
 
-<!-- produkt type dropdown -->
-<div class="container-fluid">
-  <select name="productTypeSelect" id="productTypeSelect" onchange="filteredType()">
-    <option hidden selected>Sortér efter produkt type</option>
-    <option value="all">Vis alle typer</option>
-    <option value="merch">Tøj</option>
-    <option value="sweets">Slik</option>
-    <option value="drink">Drikelse</option>
-    <option value="food">Mad</option>
-  </select>
-</div>
-
 <!-- produkter tabel -->
 <div class="container-fluid">
-  <table class="table" id="productsDataTable">
-    <tr>
-      <th>Produkt Id</th>
-      <th>Produkt Type</th>
-      <th>Produkt Navn</th>
-      <th>Pris</th>
-      <th>Tilføj til kurv</th>
-    </tr>
-  </table>
+  <div class ="row">
+    <div class="col-sm">
+      <h2>alle Produkter</h2>
+
+      <!-- produkt type dropdown -->
+      <div class="container-fluid">
+        <select name="productTypeSelect" id="productTypeSelect" onchange="filteredType()">
+          <option hidden selected>Sortér efter produkt type</option>
+          <option value="all">Vis alle typer</option>
+          <option value="merch">Tøj</option>
+          <option value="sweets">Slik</option>
+          <option value="drink">Drikelse</option>
+          <option value="food">Mad</option>
+        </select>
+      </div>
+
+      <table class="table" id="productsDataTable">
+        <tr>
+          <th>Produkt Id</th>
+          <th>Produkt Type</th>
+          <th>Produkt Navn</th>
+          <th>Pris</th>
+          <th>Tilføj til kurv</th>
+        </tr>
+      </table>
+    </div>
+
+    <div class="col-sm">
+      <h2>Din kurv</h2>
+      <table class="table" id="shoppingCartTable">
+        <tr>
+          <th>Produkt navn</th>
+          <th>Antal</th>
+          <th>Pris</th>
+        </tr>
+      </table>
+    </div>
+
+  </div>
 </div>
 
 <script src="../../js/customerUI/allProducts.js"></script>
