kalender shit over det hele

--- a/HTML/admin/admin.html
+++ b/HTML/admin/admin.html
@@ -16,12 +16,13 @@
 <div class="container">
   <h1>Menu</h1>
   <ul class="list-group">
-    <li style="background-color: #dddddd" class="list-group-item"><a href="../shows/create-show.html">Opret nyt show</a></li>
+    <li class="list-group-item"><a href="../shows/create-show.html">Opret nyt show</a></li>
     <li class="list-group-item"><a href="../shows/find-and-edit-shows.html">Styr shows</a></li>
-    <li style="background-color: #dddddd" class="list-group-item"><a href="../bookings/create-booking.html">Opret ny booking</a></li>
+    <li class="list-group-item"><a href="../bookings/create-booking.html">Opret ny booking</a></li>
     <li class="list-group-item"><a href="../bookings/find-and-edit-booking.html">Styr bookings</a></li>
     <li class="list-group-item"><a href="../customerUI/shop.html">Shop</a></li>
-    <li style="background-color: #dddddd" class="list-group-item"><a href="work-schedule.html">Arbejdskalender</a></li>
+    <li class="list-group-item"><a href="../calendars/calendar.html">Booking kalender</a></li>
+    <li class="list-group-item"><a href="../work-schedule/work-schedule-calendar.html">Arbejdskalender</a></li>
   </ul>
 </div>
 
