visualisering af optagne sæder

--- a/HTML/admin/admin.html
+++ b/HTML/admin/admin.html
@@ -20,8 +20,8 @@
     <li class="list-group-item"><a href="../shows/find-and-edit-shows.html">Styr shows</a></li>
     <li class="list-group-item"><a href="../bookings/create-booking.html">Opret ny booking</a></li>
     <li class="list-group-item"><a href="../bookings/find-and-edit-booking.html">Styr bookings</a></li>
-    <li class="list-group-item"><a href="../customerUI/shop.html">Shop</a></li>
-    <li class="list-group-item"><a href="../calendars/calendar.html">Booking kalender</a></li>
+    <li class="list-group-item"><a href="../customer-UI/shop.html">Shop</a></li>
+    <li class="list-group-item"><a href="../booking-calendars/calendar.html">Booking kalender</a></li>
     <li class="list-group-item"><a href="../work-schedule/work-schedule-calendar.html">Arbejdskalender</a></li>
   </ul>
 </div>
