--- a/HTML/booking-calendars/calendar.html
+++ b/HTML/booking-calendars/calendar.html
@@ -30,6 +30,6 @@
 <script src="../../css/calendar-imports-long/calendar-long-4.js"></script>
 <script src="../../css/calendar-imports-long/calendar-long-5.js"></script>
 <script src="../../css/calendar-imports-long/calendar-long-6.js"></script>
-<script src="../../js/calendars/calendar.js"></script>
+<script src="../../js/bookingCalendars/calendar.js"></script>
 </body>
 </html>
