--- a/HTML/bookings/create-booking.html
+++ b/HTML/bookings/create-booking.html
@@ -42,7 +42,7 @@
 
     <div class="form-group">
       <label for="phoneNum">Kunde tlf. nummer</label>
-      <input type="tel" class="form-control" id="phoneNum" name="phoneNum" required>
+      <input type="tel" minlength="8" class="form-control" id="phoneNum" name="phoneNum" required>
     </div>
 
     <div class="form-group">
