--- a/HTML/bookings/find-and-edit-booking.html
+++ b/HTML/bookings/find-and-edit-booking.html
@@ -78,7 +78,7 @@
 
   <div class="form-group">
     <label for="phoneNum">Kunde tlf. nummer</label>
-    <input type="number" class="form-control" id="phoneNum" name="phoneNum">
+    <input type="tel" minlength="8" class="form-control" id="phoneNum" name="phoneNum">
   </div>
 
   <div class="form-group">
