--- a/HTML/customerUI/shop.html
+++ b/HTML/customerUI/shop.html
@@ -61,6 +61,7 @@
       <table class="table" id="shoppingCartTable">
         <tr>
           <th>Produkt navn</th>
+          <th>antal</th>
           <th>Pris</th>
         </tr>
       </table>
@@ -70,10 +71,11 @@
   <div style="float: right">
     <p >Sum for kurven:</p>
     <h2 id="cartSum"></h2>
-    <button id="btn btn-primary payCartButton">Videre til betalning</button>
+    <button class="btn btn-primary payCartButton">Videre til betaling</button>
   </div>
 </div>
 
 <script src="../../js/customerUI/allProducts.js"></script>
+<script src="../../js/customerUI/shoppingCart.js"></script>
 </body>
 </html>
