sæder tilføjet til create booking side + man behøver ikke længere skrive sal nr når man opretter / ændrer en booking

--- a/HTML/bookings/create-booking.html
+++ b/HTML/bookings/create-booking.html
@@ -402,7 +402,7 @@
       <div class="d2012 seat">2012</div>
     </div>
 
-    <input type="text" id="showIDInput" name="showIDInput">
+    <input type="text" id="showIDInput" name="showIDInput" placeholder="Show id...">
     <button type="submit" class="btn btn-primary" id="seatsButton" style="margin-top:5px">Find ledige sæder</button>
   </div>
 
