--- a/HTML/customer-UI/index.html
+++ b/HTML/customer-UI/index.html
@@ -7,9 +7,9 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=2">
 
-  <link href="../css/bootstrap.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
+  <link href="../../css/bootstrap.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="../../css/normalize.css">
+  <link rel="stylesheet" href="../../css/main.css">
 </head>
 <body>
 
@@ -19,21 +19,21 @@
     <div class="col-3"></div>
     <div class="col-2"><a href="index.html">Home</a></div>
     <div class="col-2"><a href="shop.html">Shop</a></div>
-    <div class="col-2"><a href="admin-login.html">Admin</a></div>
+    <div class="col-2"><a href="../admin/admin-login.html">Admin</a></div>
     <div class="col-3"></div>
   </div>
 </div>
 
 <!-- movies overskrift-->
-<div class="container-fluid">
+<div class="container movieContainer">
   <div class="row">
     <div class="col"><h1 style="text-align: center">Aktuelle Film</h1></div>
   </div>
   <ul class="movielist-group">
-    <li> <p>Jaws 9</p><img src="../img/jaws.jpg" alt="Jaws 9" height="300" width="260"> </li>
-    <li> <p>Fast and Furious 12</p><img src="../img/ff12.jpg" alt="FF12" height="300" width="260"> </li>
-    <li> <p>Zorro 3</p><img src="../img/z3.jpg" alt="FF12" height="300" width="260"> </li>
-    <li> <p>Very Original Christmas Movie</p><img src="../img/xmas.jpg" alt="FF12" height="300" width="260"> </li>
+    <li> <p>Jaws 9</p><img src="../../img/jaws.jpg" alt="Jaws 9" height="300" width="250"> </li>
+    <li> <p>Fast and Furious 12</p><img src="../../img/ff12.jpg" alt="FF12" height="300" width="250"> </li>
+    <li> <p>Zorro 3</p><img src="../../img/z3.jpg" alt="FF12" height="300" width="250"> </li>
+    <li> <p>Very Original Christmas Movie</p><img src="../../img/xmas.jpg" alt="FF12" height="300" width="250"> </li>
   </ul>
 </div>
 
